fix : 사진 z-index

--- a/indentity.css
+++ b/indentity.css
@@ -165,6 +165,8 @@ body {
     justify-content: center;
     width: 150px;
     margin: 0 auto;
+    position: relative;
+    z-index: 2;
 }
 
 .id_content .inner_box {
